Updated Elections website, fixed alignment issues on samll and medium screens

--- a/css/agency_v2.css
+++ b/css/agency_v2.css
@@ -172,7 +172,7 @@ img::-moz-selection {
 #mainNav .navbar-nav .nav-item .nav-link {
   font-size: 90%;
   font-weight: 800;
-  padding: 0.75em 0;
+  padding: 0.75em 0.75em;
   letter-spacing: 1px;
   color: #4A4A4A;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
